--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ li {
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../img/hero\img\\(1\).jpg);
+    url(../img/);
   background-position: center;
   background-repeat: no-repeat;
   /*padding: 0 15px;
