--- a/css/style.css
+++ b/css/style.css
@@ -116,10 +116,29 @@ li {
   margin-left: 30px;
 }
 .list-title::before {
+  margin-bottom: 30px;
   content: "";
   display: block;
   width: 270px;
   height: 120px;
+
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  background-size: 70px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.antenna::before {
+  background-image: url(../img/antenna.svg);
+}
+.clock::before {
+  background-image: url(../img/clock.svg);
+}
+.diagram::before {
+  background-image: url(../img/diagram.svg);
+}
+.astronaut::before {
+  background-image: url(../img/astronaut.svg);
 }
 /*Конец Секции 2 студии*/
 /*Начало Секции 3 студии*/
