--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,9 @@ li {
 .imegs-regular-customers + .imegs-regular-customers {
   margin-left: 30px;
 }
+.client-link {
+  display: flex;
+}
 /*Конец Секции 5 студии*/
 /*Начало секции в портфолио*/
 .list-item-pictu {
