--- a/css/style.css
+++ b/css/style.css
@@ -229,8 +229,25 @@ li {
 .imegs-regular-customers + .imegs-regular-customers {
   margin-left: 30px;
 }
+.imegs-regular-customers {
+  width: 170px;
+  height: 92px;
+}
 .client-link {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: #afb1b8;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  /*background-size: contain;*/
+}
+.client-icon {
+  width: 106px;
+  height: 60px;
+  fill: currentColor;
 }
 /*Конец Секции 5 студии*/
 /*Начало секции в портфолио*/
