--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ li {
 .antenna-title {
   align-items: center;
   justify-content: center;
-  display: flex;
+  /*display: flex;*/
   width: 100%;
   height: 120px;
   background-color: #f5f4fa;
@@ -422,6 +422,12 @@ li {
   padding-bottom: 32px;
 
   margin-right: 50px;
+}
+.item-contact a {
+  display: flex;
+  align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 .contacts {
   margin-left: auto;
