--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,30 @@ li {
 .box {
   padding: 30px 0;
 }
+.social-links-list {
+  display: flex;
+  width: 200px;
+  margin: 0 auto;
+  list-style: none;
+}
+.social-links-item:not(:last-child) {
+  margin-right: 10px;
+}
+.social-links-list-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  background-position: center;
+  position: relative;
+}
+.social-links-list-item:hover,
+.social-links-list-item:focus {
+  background-color: #2196f3;
+}
 /*Конец Секции 4 студии*/
 /*Начало Секции 5 студии*/
 .title-regular-customers {
@@ -242,8 +266,6 @@ li {
 .imegs-regular-customers + .imegs-regular-customers {
   margin-left: 30px;
 }
-.imegs-regular-customers {
-}
 .client-link {
   display: flex;
   align-items: center;
@@ -263,13 +285,13 @@ li {
   width: 106px;
   height: 60px;
 }
-.client-icon:hover/*,
-.client-icon:focus*/ {
+.client-icon:hover,
+.client-icon:focus {
   color: #2196f3;
   border-color: #2196f3;
 }
-.client-link:hover/*,
-.client-link:focus*/ {
+.client-link:hover,
+.client-link:focus {
   color: #2196f3;
 }
 /*Конец Секции 5 студии*/
