--- a/css/style.css
+++ b/css/style.css
@@ -82,14 +82,15 @@ li {
   border-radius: 4px;
   padding: 10px 32px;
   color: var(--btn-tittle);
-  background: var(--btn-background);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  background: #2196f3;
   cursor: pointer;
+  border: 1px;
 }
 .btn:hover,
 .btn:focus {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  /*color: var(--btn-tittle);*/
   background: var(--btn-background);
 }
 /*Конец Секции 1 студии*/
@@ -224,6 +225,9 @@ li {
 .box {
   padding: 30px 0;
 }
+.list-imgs {
+  background: #f5f4fa;
+}
 .social-links-list {
   display: flex;
   width: 200px;
@@ -338,17 +342,21 @@ li {
   border-style: none;
   font-family: var(--main-font-family);
 }
+.filter-btn {
+  margin-left: 8px;
+}
 .modal-btn {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
   letter-spacing: 0.03em;
-  color: var(--btn-main-color-text);
-  text-decoration: none;
-  font-family: inherit;
-  border-style: none;
-  text-shadow: none;
+  /*color: var(--btn-main-color-text);*/
+  text-align: center;
+  color: #212121;
+  background: #f5f4fa;
   border-radius: 4px;
+  padding: 6px 22px;
+  border: 1px solid #ffffff;
 }
 .button .current {
   color: var(--btn-tittle);
@@ -358,18 +366,10 @@ li {
 .modal-btn:focus {
   background-color: var(--navigation-color);
   color: var(--btn-tittle);
-  font-family: inherit;
-}
-.filter-btn + .filter-btn {
-  margin-left: 8px;
-}
-.modal-btn {
+  cursor: pointer;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
-  padding: 6px 22px;
-  border: transparent;
-  transition-property: background-color;
-  transition-duration: 1s;
-  transition-delay: 0s, 1s;
 }
 .images {
   display: flex;
@@ -477,9 +477,6 @@ li {
 }
 .contacts .item-contact {
   display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-
   margin-right: 50px;
 }
 .item-contact a {
@@ -496,6 +493,7 @@ li {
 }
 .item-contact .contact {
   color: var(--secondary-text-color);
+  fill: var(--secondary-text-color);
 }
 .contact:hover,
 .contact:focus {
